@@ -1,6 +1,9 @@
 # ChangeLog for net-fs/openafs
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/openafs/ChangeLog,v 1.136 2008/01/01 16:46:22 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/openafs/ChangeLog,v 1.137 2008/01/02 14:01:23 stefaan Exp $
+
+  02 Jan 2008; Stefaan De Roeck <stefaan@gentoo.org> openafs-1.4.6.ebuild:
+  Stable on alpha, bug #203573
 
   01 Jan 2008; Joseph Jezak <josejx@gentoo.org> openafs-1.4.6.ebuild:
   Marked ppc/ppc64 stable for bug #203573.
