@@ -1,6 +1,10 @@
 # ChangeLog for net-fs/openafs-kernel
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/openafs-kernel/ChangeLog,v 1.94 2008/01/01 16:45:44 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/openafs-kernel/ChangeLog,v 1.95 2008/01/02 13:59:08 stefaan Exp $
+
+  02 Jan 2008; Stefaan De Roeck <stefaan@gentoo.org>
+  openafs-kernel-1.4.6.ebuild:
+  Stable on alpha, bug #203573
 
   01 Jan 2008; Joseph Jezak <josejx@gentoo.org> openafs-kernel-1.4.6.ebuild:
   Marked ppc/ppc64 stable for bug #203573.
